app header and general improvements

--- a/client/src/components/marteHeader/MarteHeader.scss
+++ b/client/src/components/marteHeader/MarteHeader.scss
@@ -1,15 +1,38 @@
 .marte-header {
-    width: 100vw;
     display: flex;
+    align-items: center;
+    padding: 60px 120px;
+    justify-content: space-between;
+
+    .left {
+        flex: 1;
+        ul {
+            justify-content: left;
+        }
+    }
+    .right {
+        flex: 1;
+        ul {
+            justify-content: right;
+        }
+    }
 
     .logo {
-        float: left;
+        img {
+            height: 40px;
+        }
     }
-    .links {
-        float: none;
-    }
-    .auth {
-        float: right;
+
+    ul {
+        list-style: none;
+        padding: 0px;
+        margin: 0;
+        display: flex;
+
+        li {
+            display: inline-block;
+            padding: 7px;
+        }
     }
 
 }
