saving tokens and user on app memory

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -58,6 +58,7 @@ input[type=text], input[type=password] {
     &:-webkit-autofill:active{
         -webkit-box-shadow: 0 0 0 30px $marte-red inset !important;
         -webkit-text-fill-color: white !important;
+        caret-color: white;
     }
 }
 input[type=button], input[type=submit] {
