--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -32,6 +32,13 @@ $main-app-width: 177vh;
     font-weight: 900;
 }
 
+.has-link {
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 input[type=text], input[type=password] {
     font-family: nitti, monospace;
     font-weight: 400;
@@ -67,4 +74,27 @@ input[type=button], input[type=submit] {
     font-size: 16px;
     padding: 6px 37px;
     border-radius: 16px;
+}
+input[type=date] {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid $marte-white;
+    border-radius: 0px;
+    line-height: 40px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    box-shadow: none;
+    font-size: 20px;
+    color: white;
+    &:focus {
+        outline: none;
+        border-width: 2px;
+    }
+    &::-webkit-calendar-picker-indicator {
+        filter: invert(100%);
+        opacity: 1;
+        font-size: 20px;
+        transform: scale(1);
+        margin-left: 5px;
+    }
 }
