--- a/client/src/components/authDialog/loginDialog/LoginDialog.scss
+++ b/client/src/components/authDialog/loginDialog/LoginDialog.scss
@@ -1,16 +1,10 @@
-@import "../../Colors.scss";
+@import "../../../Colors.scss";
 
 .login-form {
     .recover-password {
         width: 100%;
         display: flex;
         justify-content: right;
-    }
-    .has-link {
-        cursor: pointer;
-        &:hover {
-            text-decoration: underline;
-        }
     }
     .password {
         width: 100%;
