changing background color based on page

--- a/client/src/components/marteHeader/MarteHeader.scss
+++ b/client/src/components/marteHeader/MarteHeader.scss
@@ -1,5 +1,6 @@
 .marte-header {
     display: flex;
+    font-size: 20px;
     align-items: center;
     padding: 60px 120px;
     justify-content: space-between;
@@ -19,7 +20,7 @@
 
     .logo {
         img {
-            height: 40px;
+            height: 56px;
         }
     }
 
