--- a/client/src/pages/mainApp/MainApp.scss
+++ b/client/src/pages/mainApp/MainApp.scss
@@ -8,13 +8,13 @@
     align-content: center;
     justify-content: center;
 
-    &.background-white {
+    &.theme-white {
         background-color: $marte-white;
     }
-    &.background-red {
+    &.theme-red {
         background-color: $marte-red;
     }
-    &.background-blue {
+    &.theme-blue {
         background-color: $marte-blue;
     }
 
