email confirmation and password reset dialogs

--- a/client/src/components/marteDialog/MarteDialog.scss
+++ b/client/src/components/marteDialog/MarteDialog.scss
@@ -13,11 +13,18 @@
         justify-content: space-between;
         padding: 0 0 25px 0;
         user-select: none;
-        // .title {
-        //     font-family: neue-haas-grotesk-display, sans-serif;
-        //     font-weight: 600;
-        //     font-style: normal;
-        // }
+        .titles {
+            .title {
+                font-size: 26px;
+                font-weight: 400;
+                font-style: normal;
+            }
+            .subtitle {
+                font-size: 18px;
+                font-weight: 400;
+                font-style: normal;
+            }
+        }
         .close {
             cursor: pointer;
         }
