landing page editions list

--- a/client/src/Colors.scss
+++ b/client/src/Colors.scss
@@ -3,4 +3,6 @@
 $marte-white: #F2EAE9;
 $marte-red: #B7271A;
 $marte-blue: #3B4A9C;
+$marte-pink: #F198D3;
+$marte-dark-pink: #A60345;
 $marte-black: #000;
