--- a/client/src/components/marteEditions/MarteEditions.scss
+++ b/client/src/components/marteEditions/MarteEditions.scss
@@ -1,6 +1,6 @@
 @import "../../Colors.scss";
 
-.marte-editions {
+.marte-editions-home {
     .header {
         background-color: $marte-white;
         color: $marte-red;
