footer with links to socials
falta os links de termo de uso e politica de privacidade que ainda nao tem

falta arrumar o termos de uso pra ficar um pouquinho mais pra esquerda, que nem no figma

--- a/client/src/components/marteFooter/MarteFooter.scss
+++ b/client/src/components/marteFooter/MarteFooter.scss
@@ -55,6 +55,13 @@
             display: flex;
             
             align-items: center;
+
+            button {
+                background-color: transparent;
+                height:min-content;
+                width:min-content;
+                padding: 0px 0px;
+            }
         }
     }
     
