--- a/client/src/components/marteFooter/MarteFooter.scss
+++ b/client/src/components/marteFooter/MarteFooter.scss
@@ -11,6 +11,7 @@
         padding: 72px 110px;
         display: flex;
         gap: 20px;
+        align-items: center;
 
 
         .footer-text {
@@ -28,7 +29,7 @@
 
 
     .social-and-contracts {
-        padding: 72px 110px;
+        padding: 60px 110px;
         display: flex;
         flex-direction: column;
         gap:10px;
