--- a/client/src/pages/mainApp/MainApp.scss
+++ b/client/src/pages/mainApp/MainApp.scss
@@ -3,11 +3,10 @@
 
 .main-app {
     background-color: $marte-white;
-    min-height: 100vh;
     display: flex;
     align-content: center;
     justify-content: center;
-
+    
     &.theme-white {
         background-color: $marte-white;
     }
@@ -17,10 +16,14 @@
     &.theme-blue {
         background-color: $marte-blue;
     }
-
+    
     .main-app-content {
         max-width: 100vw;
         width: 100vw;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
 
         &.debug {
             background-color: #ff000025;
